# Atous-Sec-Network

./: .coverage  PROJECT_STATUS.md  README.md  coverage.xml  index.ts  pyproject.toml  requirements.txt
access-control/: AccessControlService.ts
access-control/__tests__/: AccessControlService.test.ts
advanced-cache/: AdvancedMultiLevelCache.ts
advanced-cache/__tests__/: AdvancedMultiLevelCache.test.ts
analytics-system/: AdvancedAnalyticsSystem.ts  DataCollector.ts  DataProcessor.ts  ReportGenerator.ts  VisualizationEngine.ts  types.ts
analytics-system/__tests__/: AdvancedAnalyticsSystem.test.ts
atous_sec_network/core/: model_manager.py
atous_sec_network/ml/: llm_integration.py
atous_sec_network/network/: lora_optimizer.py  p2p_recovery.py
atous_sec_network/security/: abiss.py  abiss_system.py  nnis.py  nnis_system.py
audit-compliance/: AuditComplianceSystem.d.ts  AuditComplianceSystem.d.ts.map  AuditComplianceSystem.js  AuditComplianceSystem.js.map  AuditComplianceSystem.ts  types.d.ts  types.d.ts.map  types.js  types.js.map  types.ts
audit-compliance/__tests__/: AuditComplianceSystem.test.ts
backups/: version_history.json
distributed-processing/: DistributedCognitiveProcessing.ts
distributed-processing/__tests__/: DistributedCognitiveProcessing.test.ts
governance-system/: DecentralizedGovernanceSystem.ts  types.ts
governance-system/__tests__/: DecentralizedGovernanceSystem.test.ts
hardware-metrics/: AdvancedHardwareMetricsCollector.ts  RealHardwareMetricsCollector.ts
hardware-metrics/__tests__/: RealHardwareMetricsCollector.test.ts
ml-routing/: MLRoutingEngine.ts
ml-routing/__tests__/: MLRoutingEngine.test.ts
neural-intelligence/: RealNISEngine.ts
neural-intelligence/__tests__/: RealNISEngine.test.ts
p2p-network/: RealP2PNetworkManager.ts
quantum-security/: QuantumResistantSecuritySystem.ts  types.ts
quantum-security/hash/: SHAKE256.ts
security-framework/: AdvancedSecurityFramework.ts  types.ts
security-monitoring/: SecurityMonitoringService.ts
services/: CircuitBreakerService.d.ts  CircuitBreakerService.d.ts.map  CircuitBreakerService.js  CircuitBreakerService.js.map  CircuitBreakerService.ts  PrometheusMetricsCollector.d.ts  PrometheusMetricsCollector.d.ts.map  PrometheusMetricsCollector.js  PrometheusMetricsCollector.js.map  PrometheusMetricsCollector.ts  RedisCacheService.d.ts  RedisCacheService.d.ts.map  RedisCacheService.js  RedisCacheService.js.map  RedisCacheService.ts
threat-detection/: RealABISSEngine.test.ts  RealABISSEngine.ts
(+38 files in other folders)
